<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hot_sales">Hot Sales</string>
    <string name="see_more">see more</string>
    <string name="best_seller">Best Seller</string>
    <string name="search">Search</string>
    <string name="Locate">Zihuatanejo, Gro</string>
    <string name="select_cate">Select Category</string>
    <string name="view_all">view all</string>
    <string name="New">New</string>
    <string name="Buy_now_">Buy now!</string>
    <string name="phone">Phone</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="Samsung">Samsung</string>
    <string name="prise">Prise</string>
    <string name="money_prise">$300 - $500</string>
    <string name="size">Size</string>
    <string name="size_inches">4.5 to 5.5 inches</string>
    <string name="Error">Произошла ошибка</string>
    <string name="update">Update</string>
    <string name="explorer">Explorer</string>
</resources>