<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clFilterDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_hot_fone"
        android:padding="14dp"
        android:src="@drawable/ic_group_11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:gravity="center"
        android:text="@string/filter_options"
        android:textColor="#010035"
        android:textSize="18sp"
        app:fontFamily="@font/mark_pro"
        app:layout_constraintBottom_toBottomOf="@id/iv_close"
        app:layout_constraintStart_toEndOf="@id/iv_close"
        app:layout_constraintTop_toTopOf="@id/iv_close" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_buy_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@id/tvFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvFilter">

        <ImageView
            android:id="@+id/ivBuyNow"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:background="#FF6E4E" />

        <TextView
            android:id="@+id/tvBuyNow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:fontFamily="@font/mark_pro" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="30dp"
        android:text="@string/brand"
        android:textColor="#010035"
        android:textSize="18sp"
        app:fontFamily="@font/mark_pro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_close" />

    <LinearLayout
        android:id="@+id/llModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/bg_filter"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBrand">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:text="@string/Samsung"
            android:textSize="18sp"
            app:fontFamily="@font/mark_pro" />

        <View
            android:id="@+id/line"
            android:layout_width="16dp"
            android:layout_height="8dp"
            android:layout_marginStart="206dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_group_3" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvPrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="10dp"
        android:text="@string/prise"
        android:textColor="#010035"
        android:textSize="18sp"
        app:fontFamily="@font/mark_pro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llModel" />

    <LinearLayout
        android:id="@+id/llPrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_filter"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="31dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrise">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:text="@string/money_prise"
            android:textSize="18sp"
            app:fontFamily="@font/mark_pro" />

        <View
            android:id="@+id/line2"
            android:layout_width="16dp"
            android:layout_height="8dp"
            android:layout_marginStart="188dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_group_3" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="10dp"
        android:text="@string/size"
        android:textColor="#010035"
        android:textSize="18sp"
        app:fontFamily="@font/mark_pro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llPrise" />

    <LinearLayout
        android:id="@+id/llSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_filter"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="44dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:text="@string/size_inches"
            android:textSize="18sp"
            app:fontFamily="@font/mark_pro" />

        <View
            android:id="@+id/line3"
            android:layout_width="16dp"
            android:layout_height="8dp"
            android:layout_marginStart="153dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_group_3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>